--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Examples to transpile TypeScript",
   "main": "index.js",
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
@@ -18,7 +19,8 @@
     "typescript": "^4.2.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:inspect-brk": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "repository": {
     "type": "git",
