--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cli-demo": "./packages/ts-morph/example-2/bin/index.js"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
     "@types/glob": "^7.1.3",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/parser": "^4.16.1",
